--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -38,8 +38,28 @@
    <extends>QWidget</extends>
    <header>qimageviewregionwidget.h</header>
    <container>1</container>
+   <slots>
+    <signal>imageFileNameChanged(QString)</signal>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>widget</sender>
+   <signal>imageFileNameChanged(QString)</signal>
+   <receiver>statusbar</receiver>
+   <slot>showMessage(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>305</x>
+     <y>508</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>313</x>
+     <y>594</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
