--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,11 +14,73 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QImageViewRegionWidget" name="widget" native="true"/>
-    </item>
-   </layout>
+   <widget class="QImageViewRegionWidget" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>9</x>
+      <y>9</y>
+      <width>781</width>
+      <height>511</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_image_name">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>520</y>
+      <width>361</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>520</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_image_scale">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>29</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>236</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_scale_percent">
+       <property name="text">
+        <string>%</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -40,6 +102,7 @@
    <container>1</container>
    <slots>
     <signal>imageFileNameChanged(QString)</signal>
+    <signal>imageScaleChanged(int)</signal>
    </slots>
   </customwidget>
  </customwidgets>
@@ -48,16 +111,32 @@
   <connection>
    <sender>widget</sender>
    <signal>imageFileNameChanged(QString)</signal>
-   <receiver>statusbar</receiver>
-   <slot>showMessage(QString)</slot>
+   <receiver>label_image_name</receiver>
+   <slot>setText(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>305</x>
-     <y>508</y>
+     <x>273</x>
+     <y>275</y>
     </hint>
     <hint type="destinationlabel">
-     <x>313</x>
-     <y>594</y>
+     <x>106</x>
+     <y>542</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>widget</sender>
+   <signal>imageScaleChanged(int)</signal>
+   <receiver>label_image_scale</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>275</x>
+     <y>302</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>190</x>
+     <y>535</y>
     </hint>
    </hints>
   </connection>
