--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,43 +43,18 @@
      <string/>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>420</x>
       <y>520</y>
       <width>61</width>
       <height>31</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label_image_scale">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>29</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>236</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_scale_percent">
-       <property name="text">
-        <string>%</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -102,7 +77,7 @@
    <container>1</container>
    <slots>
     <signal>imageFileNameChanged(QString)</signal>
-    <signal>imageScaleChanged(int)</signal>
+    <signal>imageScaleChanged(QString)</signal>
    </slots>
   </customwidget>
  </customwidgets>
@@ -126,17 +101,17 @@
   </connection>
   <connection>
    <sender>widget</sender>
-   <signal>imageScaleChanged(int)</signal>
-   <receiver>label_image_scale</receiver>
-   <slot>setNum(int)</slot>
+   <signal>imageScaleChanged(QString)</signal>
+   <receiver>label</receiver>
+   <slot>setText(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>275</x>
-     <y>302</y>
+     <x>454</x>
+     <y>499</y>
     </hint>
     <hint type="destinationlabel">
-     <x>190</x>
-     <y>535</y>
+     <x>449</x>
+     <y>562</y>
     </hint>
    </hints>
   </connection>
